tests/errors/type_mismatch_less_equal.sp
# Test less than or equal comparison type mismatch
pub result = "hello" <= 42